Create "Client" on first time login

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dr. Navalha Login</title>
-    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.css" th:href="@{/webjars/bootstrap/css/bootstrap.css}" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/signin.css" th:href="@{/assets/css/signin.css}" />
+<!--    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.css" th:href="@{/webjars/bootstrap/css/bootstrap.css}" />-->
+<!--    <link rel="stylesheet" type="text/css" href="/assets/css/signin.css" th:href="@{/assets/css/signin.css}" />-->
 </head>
 <body>
 <div class="container">
@@ -28,9 +28,10 @@
         <div>
             <button class="w-100 btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
             <a class="w-100 btn btn-light btn-block bg-white" href="/oauth2/authorization/google" style="margin-top: 10px">
-                <img src="/assets/img/google.png" th:src="@{/assets/img/google.png}" width="20" style="margin-right: 5px;" alt="Sign in with Google">
+<!--                <img src="/assets/img/google.png" th:src="@{/assets/img/google.png}" width="20" style="margin-right: 5px;" alt="Sign in with Google">-->
                 Entrar com Google
             </a>
+            <a href="http://localhost:4200" style="decoration: none;"><button type="button">Voltar ao início</button></a>
         </div>
     </form>
 </div>
